# GPXAssist

./: Cargo.toml  README.md
assets/: test_off_icon2.svg.
gpx/: Lombardia_Ghisallo_Final.gpx  Prospect_Park_Loop.gpx  Rwanda_Kigali_UCI_Finishing_Circuit.gpx
scripts/: pyprompt.md  tpsim.py
src/: components.rs  data.rs  gpx.rs  main.rs  settings.rs  ui.rs  ut.rs
src/ui/: frame.rs  mod.rs  ui.rs
